# JourneyThroughSpace

./: .gitignore  .gitmodules  README.md
code/: CMakeLists.txt
code/assets/: Asteroid1.mtl  Asteroid2.mtl  SpaceShip1.mtl  SpaceShip2.mtl  SpaceShip3.mtl  SpaceShip4.mtl  TransportShip.fbx
code/assets/shaders/: fragmentShader.glsl  lightFragmentShader.glsl  vertexShader.glsl
code/externalCode/glad/include/glad/: glad.h
code/externalCode/glad/src/: glad.c
code/game/: CMakeLists.txt
code/game/FileManager/: FileManager.cpp  FileManager.h
code/game/GraphicsEngine/: Model.cpp  Model.h  Scene.cpp  Scene.h  Transform.cpp  Transform.h  camera.cpp  camera.h  mesh.cpp  mesh.h
code/game/InputSystem/: InputManager.cpp  InputManager.h
code/game/src/: Model.cpp  Model.h  main.cpp  mesh.cpp  mesh.h  shader.cpp  shader.h
code/gl1-unreal/Config/: DefaultGame.ini
code/gl1Unreal/Config/: DefaultEngine.ini  DefaultGame.ini
code/templates/: .gitignore-unity  .gitignore-unreal
